exports[`test Renders Button with anchor crashing 1`] = `
<a
  className="primary button"
  disabled={false}
  onClick={[Function]}
  onMouseDown={false}
  onMouseOut={false}
  onMouseOver={false}
  onMouseUp={false}
  style={Object {}}>
  Test
</a>
`;

exports[`test Renders Button with button without crashing 1`] = `
<button
  className="primary button"
  disabled={false}
  onClick={[Function]}
  onMouseDown={false}
  onMouseOut={false}
  onMouseOver={false}
  onMouseUp={false}
  style={Object {}}>
  Test
</button>
`;

exports[`test Renders Button with outline 1`] = `
<button
  className="primary button outline"
  disabled={false}
  onClick={[Function]}
  onMouseDown={false}
  onMouseOut={false}
  onMouseOver={false}
  onMouseUp={false}
  style={Object {}}>
  Test
</button>
`;

exports[`test Renders a disabled Button 1`] = `
<button
  className="primary button"
  disabled={true}
  onClick={[Function]}
  onMouseDown={false}
  onMouseOut={false}
  onMouseOver={false}
  onMouseUp={false}
  style={Object {}}>
  Test
</button>
`;

exports[`test Renders a full width button 1`] = `
<button
  className="primary button fullWidth"
  disabled={false}
  onClick={[Function]}
  onMouseDown={false}
  onMouseOut={false}
  onMouseOver={false}
  onMouseUp={false}
  style={Object {}}>
  Test
</button>
`;

exports[`test Renders a full width button 2`] = `
<button
  className="primary button mobileFullWidth"
  disabled={false}
  onClick={[Function]}
  onMouseDown={false}
  onMouseOut={false}
  onMouseOver={false}
  onMouseUp={false}
  style={Object {}}>
  Test
</button>
`;
